@@ -4,7 +4,9 @@ Changelog
 2.0.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix regression in normalizer: handle POSIX locale identifiers
+  in addition to IETF language codes.
+  [davisagli]
 
 
 2.0.6 (2013-04-06)
